feat: disassociate medicine from pyxis
